<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLogin"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_64dp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/label_login"
            android:textSize="@dimen/text_size_28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvEmail"
            style="@style/SampleText.Medium"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_marginTop="@dimen/dimen_56dp"
            android:text="@string/label_username"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLogin" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/SampleTextInputLayoutStyle"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                style="@style/SampleEditTextStyle.UserId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_input_username"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPasswordLabel"
            style="@style/SampleText.Medium"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/label_password"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilEmail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/SampleTextInputLayoutStyle"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPasswordLabel"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                style="@style/SampleEditTextStyle.Password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_input_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/SampleButtonStyle"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:text="@string/action_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPassword" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvRegister"
            style="@style/SampleText.Medium"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/label_dont_have_account"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            style="@style/SampleUnelevatedButtonStyle.Bordered"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/action_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRegister" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
